--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
   <script src="bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
+  <script src="https:/code.jquery.com/jquery-3.6.0.js"></script>
+  <script src="https:/code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
   <link rel="stylesheet" href="bootstrap-5.0.2-dist/css/bootstrap.css" />
 </head>
 <div id="app">
