add set directory view; tweak boxes view

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@
           <li class="nav-item">
             <router-link class="nav-link active" aria-current="page" to="/boxes"> Boxes </router-link>
           </li>
+          <li class="nav-item">
+            <router-link class="nav-link active" aria-current="page" to="/setdirectory"> Set Directory </router-link>
+          </li>
         </ul>
       </div>
     </div>
