--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <head>
   <script src="bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
   <script src="https:/code.jquery.com/jquery-3.6.0.js"></script>
@@ -6,27 +7,16 @@
   <link rel="stylesheet" href="bootstrap-5.0.2-dist/css/bootstrap.css" />
 </head>
 <div id="app">
-  <nav class="navbar navbar-light">
-    <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-        aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <router-link class="nav-link active" aria-current="page" to="/home"> Home </router-link>
-          </li>
-          <li class="nav-item">
-            <router-link class="nav-link active" aria-current="page" to="/boxes"> Boxes </router-link>
-          </li>
-          <li class="nav-item">
-            <router-link class="nav-link active" aria-current="page" to="/setdirectory"> Set Directory </router-link>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  <ul class="nav justify-content-center">
+    <li class="nav-item">
+      <router-link class="nav-link active" aria-current="page" to="/home"> Home </router-link>
+    </li>
+    <li class="nav-item">
+      <router-link class="nav-link active" aria-current="page" to="/boxes"> Boxes </router-link>
+    </li>
+    <li class="nav-item">
+      <router-link class="nav-link active" aria-current="page" to="/setdirectory"> Set Directory </router-link>
+    </li>
+  </ul>
   <router-view></router-view>
 </div>
